# matplotlib_scenegraph

./: .gitignore  LICENSE.txt  Makefile  README.md  TODO.md  _testbed.py  example_models.py  main.py  main_raw.py  pyproject.toml
.github/: copilot-instructions.md
cameras/: camera_base.py  camera_orthographic.py
core/: constants.py  geometry.py  object_3d.py  transform_utils.py
examples/: _main_raw.py  _mesh_example.py  _scene_graph.py  _testbed.py  animation_loop_example.py  basic.py  camera_controller.py  controller_awds_on_camera.py  controller_awds_on_object.py  controller_camera.py  controller_object.py  controller_trackball.py  depth_sorting.py  example_models.py  geometry_shape.py  geometry_shape_example.py  light_example copy.py  light_example.py  lines_example.py  lines_from_mesh.py  main.py  main_raw.py  mesh_basic_example.py  mesh_depth_example.py  mesh_example.py  mesh_normal_example.py  mesh_phong_example.py  mesh_textured.py  mesh_textured_example.py  points_example.py  polygons_example.py  polygons_from_mesh.py  renderer_events.py  rendering_event.py  save_as_obj.py  save_video.py  scene_graph.py  sprite.py  sprite_example.py  test_object3d_core.py  (+7 more)
helpers/: animation_loop.py  mesh_parser_meshio.py  mesh_parser_obj_manual.py  scene_examples.py
objects/: __init__.py  lines.py  points.py  polygons.py  textured_mesh.py
tests/: test_object3d_core_complex.py  test_object3d_rotations.py
tmp/:  mpl_key_press.py  _blit.py  _draw_text_blit.py  blit_manager.py  blitting.py  draw_blit.py  draw_line_collection.py  draw_lines.py  draw_points.py  (+12 more)
(+129 files in other folders)
