[project]
name = "mpl-graph"
version = "0.1.0"
description = ""
authors = [
    {name = "Jerome Etienne",email = "jerome.etienne@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pyrr (>=0.10.3,<0.11.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "meshio (>=5.3.5,<6.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Configuration for the Black code formatter 
[tool.black]
line-length = 160   # to match the 79 character limit of PEP 8, but allow some extra space for longer lines
